# chess-openings-viz

./: README.md  createTree.py  create_boards.py  create_hierarchy.py  insert_placeholder.js  main.py  openings.csv  openings_hierarchy _halfmoves.csv  openings_hierarchy.csv  package-lock.json  package.json  pipeline.md  restructre_tree.js  tree.json  tree.txt  treeData.json  treeDataNew.json
backup_data/: treeData_old.json
chessviz/: pyproject.toml
chessviz/chessviz/: dev-clusters.py  dev-fill.py  main.py  test-colours.py
chessviz/data/: 00-lichess-openings.csv
chessviz/output/: 04-lichess-openings.csv  1-openings_hierarchy.csv  2-hierarchy-hm.csv  4-openings.csv  tree.json  tree.txt
chessviz/tests/: test_chessviz.py
data/: 0-openings.csv
output/: 1-openings_hierarchy.csv  tree.txt
shared/: clusters.json  lichess_hierarchy.csv
tree_python_export/: tree_halfmoves.json  tree_python_export.json
viz/: home.html  svgtopng.py  test.html  visTree.js
viz2/: about-toggle.js  increment-depth.js  index.html  index.js  pop-select.js  populate-dropdown.js  tree.json  visTree.js
