[tool.poetry]
name = "chessviz"
version = "0.1.0"
description = ""
authors = ["schuenemann", "LeonKie"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
chess = "^1.9.0"
networkx = "^2.8.2"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
